--- a/resources/assets/sass/layouts.sass
+++ b/resources/assets/sass/layouts.sass
@@ -47,6 +47,26 @@ html,body
 .m-b-md
     margin-bottom: 40px
 
+.pagination
+    text-align: center
+    margin: 20px
+    padding: 0px
+
+    li
+        list-style: none
+        display: inline-block
+        text-decoration: none
+        font-size: 20px
+        font-weight: bold
+        width: 200px
+
+        a
+            text-decoration: none
+            color: #636b6f
+
+.disabled
+    color: #dedfe0
+
 .return
     color: #636b6f
     display: block
